--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,22 @@ section{
   font-size: 24px;
 }
 
+a{
+  color: white;
+}
+
+.tile{
+    min-width: 50%;
+    max-width: 50%;
+    background-color: rgba(0, 0, 0, .65);
+    border-radius: 10px;
+}
+.tile p{
+    margin-left: 5px;
+    margin-right: 5px;
+    overflow-wrap: anywhere;
+}
+
 .App {
   text-align: center;
   width: 100%;
@@ -64,6 +80,13 @@ section{
     font-size: 80%;
   }
   .App{
+    font-size: 80%;
+  }
+  .tile{
+        max-width: 90%;
+        text-justify: justify;
+  }
+  .tile li{
     font-size: 80%;
   }
 }
