--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -66,11 +66,19 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .navbarWrapper {
-    flex-direction: column;
-  }
-  .logo{
-    justify-content: center;
-    padding-top: 1rem;
-  }
+    .navbarWrapper {
+        flex-direction: column;
+    }
+    .logo{
+        justify-content: center;
+        padding-top: 1rem;
+    }
+    .navbar ul{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+    .navbar ul li:nth-child(5) {
+        grid-column: 2 / span 2; 
+        justify-self: center;
+    }
 }
