--- a/src/components/Skills/skills.module.css
+++ b/src/components/Skills/skills.module.css
@@ -4,24 +4,14 @@
     justify-content: center;
     flex-direction: column;
 }
-.tile{
-    min-width: 45%;
-    max-width: 80%;
-    background-color: rgba(0, 0, 0, .65);
-    border-radius: 10px;
-}
-.tile p{
-    margin-left: 5px;
-    margin-right: 5px;
-}
-.tile ul{
+.skillsList ul{
     list-style: none;
     min-width: 20%;
     padding: 0;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
-.tile li{
+.skillsList li{
     border-radius: 10px;
     background-color: black;
     margin: 0.3rem;
@@ -30,11 +20,8 @@
     justify-content: start;
     align-items: center;
 }
-.tile li:hover{
+.skillsList li:hover{
     background-color: grey;
-}
-.profile{
-    color: white;
 }
 @media only screen and (max-width: 600px) {
   .tile{
