--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-body{
+body {
   background-color: #121212;
   color: #e0e0e0;
   font-family: sans-serif;
 }
 
-section{
+section {
   min-height: 90vh;
   max-width: 800px;
   margin: auto;
@@ -12,20 +12,39 @@ section{
   font-size: 24px;
 }
 
-a{
+footer {
+  position: sticky;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background: linear-gradient(
+    90deg,
+    rgb(0, 0, 0) 0%,
+    rgb(11, 11, 11) 50%,
+    rgb(20, 20, 20) 100%
+  );
+  text-align: center;
+}
+
+a {
   color: white;
 }
 
-.tile{
-    min-width: 50%;
-    max-width: 50%;
-    background-color: rgba(0, 0, 0, .65);
-    border-radius: 10px;
+.tile {
+  min-width: 50%;
+  max-width: 50%;
+  background-color: rgba(0, 0, 0, 0.65);
+  border-radius: 10px;
 }
-.tile p{
-    margin-left: 5px;
-    margin-right: 5px;
-    overflow-wrap: anywhere;
+.tile p {
+  margin-left: 5px;
+  margin-right: 5px;
+  overflow-wrap: anywhere;
 }
 
 .App {
@@ -34,7 +53,7 @@ a{
   background-color: #121212;
   display: flex;
   flex-direction: column;
-  background-image: url('../public/background.jpg');
+  background-image: url("../public/background.jpg");
   background-size: contain;
   background-attachment: fixed;
   background-position: center;
@@ -76,17 +95,17 @@ a{
 }
 
 @media only screen and (max-width: 600px) {
-  .App p{
+  .App p {
     font-size: 80%;
   }
-  .App{
+  .App {
     font-size: 80%;
   }
-  .tile{
-        max-width: 90%;
-        text-justify: justify;
+  .tile {
+    max-width: 90%;
+    text-justify: justify;
   }
-  .tile li{
+  .tile li {
     font-size: 80%;
   }
 }
